--- a/Configure/Loon/Loon.conf
+++ b/Configure/Loon/Loon.conf
@@ -179,7 +179,7 @@ dl.l.google.com = server:119.29.29.29
 苹果服务 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Apple.png
 电报服务 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Telegram.png
 国际抖音 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok.png
-油管视频 = select,国际媒体,全球直连, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+油管视频 = select,节点选择,国际媒体,手动切换,全球直连, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 应用净化 = select,REJECT,DIRECT, img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Advertising.png
 漏网之鱼 = select,节点选择,手动切换, img-url = https://raw.githubusercontent.com/fanmingming/Rules/main/Filter/Outside.png
 
