--- a/Configure/Clash/Clash.yaml
+++ b/Configure/Clash/Clash.yaml
@@ -4124,5 +4124,8 @@ rules:
   - IP-CIDR,101.198.128.0/18,🎯 全球直连,no-resolve
   - IP-CIDR,101.198.192.0/19,🎯 全球直连,no-resolve
   - IP-CIDR,101.199.196.0/22,🎯 全球直连,no-resolve
+  - DOMAIN-KEYWORD,macked,Proxy
+  - DOMAIN-SUFFIX,vk.com,Proxy
+  - DOMAIN-SUFFIX,userapi.com,Proxy
   - GEOIP,CN,🎯 全球直连
   - MATCH,🐟 漏网之鱼
